[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse>=1.6.3",
    "bertopic>=0.17.3",
    "colbert-ai>=0.2.21",
    "matplotlib>=3.10.3",
    "ragatouille>=0.0.9.post2",
    "rerankers[transformers]>=0.10.0",
    "spacy>=3.8.7",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
